novena-eeprom: Get initial read/write support working
We can now read from the live EEPROM, update it, and save cached copies
of the EEPROM file to disk.

Signed-off-by: Sean Cross <xobs@kosagi.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 novena-eeprom.h
 novena-eeprom-gui.pro.user
+novena-eeprom-gui.pro.user*
 *.autosave
+*.o
+*.novena-eeprom
+/novena-eeprom-gui
+*.swp
+*.swo
+Makefile
+moc_*
+qrc_*
+ui_*
